sql/rpl_mi.cc
@@ -24,6 +24,7 @@
 #define DEFAULT_CONNECT_RETRY 60
 
 // Defined in slave.cc
+int init_longvar_from_file(long* var, IO_CACHE* f, long default_val);
 int init_intvar_from_file(int* var, IO_CACHE* f, int default_val);
 int init_strvar_from_file(char *var, int max_size, IO_CACHE *f,
 			  const char *default_val);
@@ -36,7 +37,8 @@ Master_info::Master_info(bool is_slave_recovery)
    port(MYSQL_PORT), connect_retry(DEFAULT_CONNECT_RETRY), inited(0), 
    rli(is_slave_recovery), abort_slave(0), 
    slave_running(0), slave_run_id(0), sync_counter(0),
-   heartbeat_period(0), received_heartbeats(0), master_id(0)
+   heartbeat_period(0), received_heartbeats(0), master_id(0),
+   retry_count(master_retry_count)
 {
   host[0] = 0; user[0] = 0; password[0] = 0;
   ssl_ca[0]= 0; ssl_capath[0]= 0; ssl_cert[0]= 0;
@@ -132,8 +134,10 @@ enum {
   LINE_FOR_MASTER_HEARTBEAT_PERIOD= 16,
   /* 6.0 added value of master_ignore_server_id */
   LINE_FOR_REPLICATE_IGNORE_SERVER_IDS= 17,
+  /* line for master_retry_count */
+  LINE_FOR_MASTER_RETRY_COUNT= 18,
   /* Number of lines currently used when saving master info file */
-  LINES_IN_MASTER_INFO= LINE_FOR_REPLICATE_IGNORE_SERVER_IDS
+  LINES_IN_MASTER_INFO= LINE_FOR_MASTER_RETRY_COUNT
 };
 
 int init_master_info(Master_info* mi, const char* master_info_fname,
@@ -237,6 +241,7 @@ file '%s')", fname);
     int ssl= 0, ssl_verify_server_cert= 0;
     float master_heartbeat_period= 0.0;
     char *first_non_digit;
+    long retry_count;
 
     /*
        Starting from 4.1.x master.info has new format. Now its
@@ -335,6 +340,14 @@ file '%s')", fname);
         sql_print_error("Failed to initialize master info ignore_server_ids");
         goto errwithmsg;
       }
+
+      /* master_retry_count may be in the file. */
+      if (lines >= LINE_FOR_MASTER_RETRY_COUNT &&
+          init_longvar_from_file(&retry_count, &mi->file, master_retry_count))
+      {
+        sql_print_error("Failed to initialize master info master_retry_count");
+        goto errwithmsg;
+      }
     }
 
 #ifndef HAVE_OPENSSL
@@ -354,6 +367,7 @@ file '%s')", fname);
     mi->ssl= (my_bool) ssl;
     mi->ssl_verify_server_cert= ssl_verify_server_cert;
     mi->heartbeat_period= master_heartbeat_period;
+    mi->retry_count= retry_count;
   }
   DBUG_PRINT("master_info",("log_file_name: %s  position: %ld",
                             mi->master_log_name,
@@ -464,14 +478,14 @@ int flush_master_info(Master_info* mi, bool flush_relay_log_cache)
   my_sprintf(heartbeat_buf, (heartbeat_buf, "%.3f", mi->heartbeat_period));
   my_b_seek(file, 0L);
   my_b_printf(file,
-              "%u\n%s\n%s\n%s\n%s\n%s\n%d\n%d\n%d\n%s\n%s\n%s\n%s\n%s\n%d\n%s\n%s\n",
+              "%u\n%s\n%s\n%s\n%s\n%s\n%d\n%d\n%d\n%s\n%s\n%s\n%s\n%s\n%d\n%s\n%s\n%ld\n",
               LINES_IN_MASTER_INFO,
               mi->master_log_name, llstr(mi->master_log_pos, lbuf),
               mi->host, mi->user,
               mi->password, mi->port, mi->connect_retry,
               (int)(mi->ssl), mi->ssl_ca, mi->ssl_capath, mi->ssl_cert,
               mi->ssl_cipher, mi->ssl_key, mi->ssl_verify_server_cert,
-              heartbeat_buf, ignore_server_ids_buf);
+              heartbeat_buf, ignore_server_ids_buf, mi->retry_count);
   my_free(ignore_server_ids_buf, MYF(0));
   err= flush_io_cache(file);
   if (sync_masterinfo_period && !err && 
